--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@reach/router": "^1.2.1",
 		"axios": "^0.16.2",
+		"enzyme": "^3.9.0",
 		"isomorphic-fetch": "^2.2.1",
 		"lodash.isequal": "^4.5.0",
 		"node-sass": "^4.11.0",
@@ -12,6 +13,7 @@
 		"react": "^16.8.2",
 		"react-dom": "^16.8.2",
 		"react-router-dom": "^4.2.2",
+		"react-router-test-context": "^0.1.0",
 		"react-scripts": "2.1.5",
 		"serve": "^10.1.2"
 	},
